--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -21492,7 +21492,7 @@
         <target>After all, the citizens have been thrown out of town by the explosion...</target>
       </segment>
     </unit>
-    <unit id="OXoMte5" name="Du kannst nicht &lt;strong&gt;mehr als {max} Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.">
+    <unit id="InNTsjR">
       <notes>
         <note category="german">Du kannst nicht &lt;strong&gt;mehr als {max} Rationen Wasser pro Tag&lt;/strong&gt; entnehmen.</note>
         <note category="from">twig:///templates/ajax/game/town/well.html.twig</note>
