--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -670,7 +670,7 @@
       </notes>
       <segment>
         <source>Deine Einstellung wurde gespeichert.</source>
-        <target>Your settings has been saved.</target>
+        <target>Your settings have been saved.</target>
       </segment>
     </unit>
     <unit id="TP_RyxL" name="Haus besuchen">
