--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2529,5 +2529,29 @@
         <target>Projekt</target>
       </segment>
     </unit>
+    <unit id="Lof2KKm" name="Tag hinzufügen (optional)">
+      <segment>
+        <source>Tag hinzufügen (optional)</source>
+        <target>Tag hinzufügen (optional)</target>
+      </segment>
+    </unit>
+    <unit id="FQORaiq" name="Tag">
+      <segment>
+        <source>Tag</source>
+        <target>Tag</target>
+      </segment>
+    </unit>
+    <unit id="aO5vOyS">
+      <segment>
+        <source>Ein Script auf dieser Seite ist abgestürzt; weitere Informationen wurden an die Web-Konsole übermittelt. Die Seite funktioniert möglicherweise nicht mehr korrekt. Bitte melde diesen Fehler:</source>
+        <target>Ein Script auf dieser Seite ist abgestürzt; weitere Informationen wurden an die Web-Konsole übermittelt. Die Seite funktioniert möglicherweise nicht mehr korrekt. Bitte melde diesen Fehler:</target>
+      </segment>
+    </unit>
+    <unit id="fU14gKC">
+      <segment>
+        <source>Ein Fehler ist aufgetreten. Es stehen keine weiteren Informationen zur Verfügung.</source>
+        <target>Ein Fehler ist aufgetreten. Es stehen keine weiteren Informationen zur Verfügung.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
