--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -1351,7 +1351,7 @@
         <target>Neue Anwendung registrieren</target>
       </segment>
     </unit>
-    <unit id="MxCYTlN" name="Änderungen an {appname} speichern">
+    <unit id="2OM.kVy" name="Änderungen an {appname} speichern">
       <segment>
         <source>Änderungen an {appname} speichern</source>
         <target>Änderungen an « {appname} » speichern</target>
