--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -2051,9 +2051,9 @@
         <target>Register new application</target>
       </segment>
     </unit>
-    <unit id="MxCYTlN" name="Änderungen an {appname} speichern">
+    <unit id="2OM.kVy" name="Änderungen an {appname} speichern">
       <notes>
-        <note category="german">Änderungen an {appname} speichern</note>
+        <note category="german">Änderungen an « {appname} » speichern</note>
         <note category="from">php:///src/Controller/Admin/AdminAppController.php</note>
       </notes>
       <segment>
